version 2.2.4 / 31.12.2022
* Do not render when the game is not visible (still gain progress)
* Fix minor spelling mistakes
* Clean up the code
* Add goals to challenges

version 2.2.3 / 29.12.2022
* Added 6 new skills
* Added 2 new shop items
* Added 4 new milestones
* Added a new Dark Matter mechanic
* Rebalance the items from the Dark Matter shop

version 2.2.2 / 26.12.2022
* Jobs and skills can now continue past infinity (1e305)

version 2.2.1 / 25.12.2022
* Added Medieval, Extended, British and Modern coin display options
* Fix a few small bugs

version 2.2 / 25.12.2022
* Added Dark Matter and Dark Orbs
* Removed the games completed boosts
* Made challenges even stronger!

version 2.1.17 / 18.12.2022
* Add a fifth challenge and rework the previous ones
* Fix a few spelling mistakes

version 2.1.16 / 02.12.2022
* fix loading old saves

version 2.1.15 / 30.11.2022
* challenges now give rewards only on exit
* show current challenge reward correctly
* fixed rounding up values (now they shown rounding down)

version 2.1.14a / 29.11.2022
* bugfix: reset challenge rewards on game completion

version 2.1.14 / 29.11.2022
* 4 challenges are added
* Fix spelling and grammar in various tooltips
* New color scheme for colorblind people (Blue-yellow color blindness)

version 2.1.13 / 27.11.2022
* Minor bugfixes
* Error display added for easier bugs submission
* Time Warping skill slightly buffed
* Mind Release skill added
* Mind Sieze removed
* Added evil/s, essence/s stats
* Buffed Faint Hope milestone

version 2.1.12a / 26.11.2022
* bugfix: Great jobs and skills must do level ups even after maximum

version 2.1.12 / 25.11.2022
* added Stats Page
* added Changelog

version 2.1.11 / 24.11.2022 
* improved code quality

version 2.1.10 / 23.11.2022 
* tooltip for auto-buy 

version 2.1.9 / 21.11.2022 
* Heroic Milestones rebalanced completely
* Show effect description for Milestones from game data
* small UI update
* fixes for infinity values

version 2.1.8a / 20.11.2022 